--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>FCC Survey Form</title>
         <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Abel|Ubuntu:300" rel="stylesheet">
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
