add responsiveness and improve input design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <label for="name" id="name-label">Name:</label>  
                     </div>
                     <div class="input">
-                        <input type="text" id="name" name="name" placeholder="Enter your first name" required>
+                        <input type="text" id="name" class="main-inputs" name="name" placeholder="Enter your first name" required>
                     </div>
                 </div>
                 <div class="form-field">
@@ -30,7 +30,7 @@
                         <label for="email" id="email-label">E-mail:</label> 
                     </div>
                     <div class="input">
-                        <input type="email" id="email" name="email" placeholder="Enter your e-mail address" required>
+                        <input type="email" id="email" class="main-inputs" name="email" placeholder="Enter your e-mail address" required>
                     </div>
                 </div>   
                 <div class="form-field">
@@ -38,7 +38,7 @@
                             <label for="number" id="number-label">Age:</label> 
                     </div>
                     <div class="input">
-                        <input type="number" id="number" name="number" 
+                        <input type="number" id="number" class="main-inputs" name="number" 
                         step="1" min="18" max="65" value="18"
                         placeholder="Enter your age">    
                     </div>
@@ -48,7 +48,7 @@
                         <label for="dropdown">Where did you hear about us?</label>  
                     </div>
                     <div class="input">
-                        <select id="dropdown" name="dropdown">
+                        <select id="dropdown" class="main-inputs" name="dropdown">
                             <option>Please select</option>
                             <option>Word of mouth</option>
                             <option>Social Media</option>
@@ -101,7 +101,7 @@
                         <label for="comments">Comments and feedback:</label> 
                     </div>
                     <div class="input">
-                        <textarea id="comments" name="comments" placeholder="Enter comments"></textarea>
+                        <textarea id="comments" class="main-inputs" name="comments" placeholder="Enter comments"></textarea>
                     </div>
                 </div>  
                 <div id="rating">
