add values to radio buttons

--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
                     <fieldset>
                         <legend>I'd recommend this company to my friends and co-workers</legend>
                         <label for="strongly-disagree">
-                            <input type="radio" id="strongly-disagree" name="recommend" required>Strongly Disagree
+                            <input type="radio" id="strongly-disagree" name="recommend" value="1" required>Strongly Disagree
                         </label>
                         <label for="disagree">
-                            <input type="radio" id="disagree" name="recommend">Disagree
+                            <input type="radio" id="disagree" name="recommend" value="2">Disagree
                         </label>
                         <label for="maybe">
-                            <input type="radio" id="maybe" name="recommend" checked>Maybe
+                            <input type="radio" id="maybe" name="recommend" value="3" checked>Maybe
                         </label>
                         <label for="agree">
-                            <input type="radio" id="agree" name="recommend">Agree
+                            <input type="radio" id="agree" name="recommend" value="4">Agree
                         </label>
                         <label for="strongly-agree">
-                            <input type="radio" id="strongly-agree" name="recommend">Strongly Agree
+                            <input type="radio" id="strongly-agree" name="recommend" value="5">Strongly Agree
                         </label>
                     </fieldset>
                 </div> 
